feat(GraphNode): enhance constructor to include additional properties from Link